# sdl2bootstrapper

./: CMakeLists.txt  README.md
Shaders/: Simple.frag  Simple.vert
cmake/: FindSDL2.cmake
include/: DLApplication.h
include/glad/: glad.h
src/: Animation.h  Camera.cpp  Camera.h  DLApplication.cpp  DLApplication.h  DLScene.cpp  DLScene.h  DLSceneObject.cpp  DLSceneObject.h  DLSimpleScene.cpp  DLSimpleScene.h  IRender.h  IRender.hpp  Matrix.h  Quaternion.h  SceneRequest.cpp  SceneRequest.h  SplashScene.cpp  SplashScene.h  Square.cpp  Square.h  Vector.h  glad.c  main.cpp
